--- a/Views/VolumeSlider.xaml
+++ b/Views/VolumeSlider.xaml
@@ -1,15 +1,42 @@
 <UserControl
   x:Class="AVM.Views.VolumeSlider"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:viewmodels="using:AVM.ViewModels"
+  xmlns:views="using:AVM.Views">
 
-  <StackPanel>
+  <StackPanel Orientation="Horizontal">
 
-    <Slider
-      Height="100"
-      Orientation="Vertical"
-      Value="{Binding Volume, Mode=TwoWay}"/>
-    <TextBlock Text="{Binding Name}"/>
+    <!-- This ViewModels VolumeSlider -->
+    <StackPanel>
+
+      <Slider
+        Height="100"
+        Orientation="Vertical"
+        IsEnabled="{Binding IsSliderEnabled}"
+        Value="{Binding Volume, Mode=TwoWay}"/>
+
+      <Image
+        Width="32"
+        Opacity="{Binding ApplicationIconOpacity}"
+        Source="{Binding ApplicationIcon}"
+        PointerPressed="Image_PointerPressed"
+        ToolTipService.ToolTip="{Binding Name}"
+        ToolTipService.Placement="Bottom"/>
+
+    </StackPanel>
+
+    <!-- Recursively display this mixers children -->
+    <GridView ItemsSource="{Binding Children}">
+      <GridView.ItemTemplate>
+        <DataTemplate x:DataType="viewmodels:VolumeSliderViewModel">
+
+          <!-- Child mixer -->
+          <views:VolumeSlider DataContext="{x:Bind Mode=OneWay}"/>
+
+        </DataTemplate>
+      </GridView.ItemTemplate>
+    </GridView>
 
   </StackPanel>
 
