--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -2,8 +2,8 @@
   x:Class="AVM.Views.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:views="using:AVM.Views"
-  Title="AVM">
+  xmlns:viewmodels="using:AVM.ViewModels"
+  xmlns:views="using:AVM.Views">
 
   <StackPanel
     Loaded="StackPanel_Loaded"
@@ -14,13 +14,19 @@
     <ComboBox
       ItemsSource="{x:Bind VM.Devices}"
       DisplayMemberPath="Name"
-      SelectedItem="{x:Bind VM.SelectedDevice, Mode=TwoWay}"
+      SelectedIndex="{x:Bind VM.SelectedDeviceIndex, Mode=TwoWay}"
       HorizontalAlignment="Stretch"
       Background="Transparent"
       BorderBrush="Transparent"/>
 
-    <!-- Root Mixer -->
-    <views:VolumeSlider DataContext="{x:Bind VM.SelectedDevice, Mode=OneWay}"/>
+    <!-- Mixers -->
+    <GridView ItemsSource="{x:Bind VM.Mixers, Mode=OneWay}">
+      <GridView.ItemTemplate>
+        <DataTemplate x:DataType="viewmodels:VolumeSliderViewModel">
+          <views:VolumeSlider DataContext="{x:Bind}"/>
+        </DataTemplate>
+      </GridView.ItemTemplate>
+    </GridView>
   
   </StackPanel>
 
