--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -2,32 +2,8 @@
   x:Class="AVM.Views.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:viewmodels="using:AVM.ViewModels"
   xmlns:views="using:AVM.Views">
 
-  <StackPanel
-    Loaded="StackPanel_Loaded"
-    HorizontalAlignment="Left"
-    VerticalAlignment="Top">
-
-    <!-- Device Selector -->
-    <ComboBox
-      ItemsSource="{x:Bind VM.Devices}"
-      DisplayMemberPath="Name"
-      SelectedIndex="{x:Bind VM.SelectedDeviceIndex, Mode=TwoWay}"
-      HorizontalAlignment="Stretch"
-      Background="Transparent"
-      BorderBrush="Transparent"/>
-
-    <!-- Mixers -->
-    <GridView ItemsSource="{x:Bind VM.Mixers, Mode=OneWay}">
-      <GridView.ItemTemplate>
-        <DataTemplate x:DataType="viewmodels:VolumeSliderViewModel">
-          <views:VolumeSlider DataContext="{x:Bind}"/>
-        </DataTemplate>
-      </GridView.ItemTemplate>
-    </GridView>
-  
-  </StackPanel>
+  <views:MainPage/>
 
 </Window>
