--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -2,7 +2,8 @@
   x:Class="AVM.Views.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:views="using:AVM.Views">
+  xmlns:views="using:AVM.Views"
+  Activated="Window_Activated">
 
   <views:MainPage/>
 
