--- a/App.xaml
+++ b/App.xaml
@@ -8,6 +8,7 @@
       <ResourceDictionary.MergedDictionaries>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
         <!--  Other merged dictionaries here  -->
+        <ResourceDictionary Source="Resources/SettingsResources.xaml"/>
         <ResourceDictionary Source="Resources/TrayIconResources.xaml"/>
       </ResourceDictionary.MergedDictionaries>
       <!--  Other app resources here  -->
